my final output

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ i{
   transition: .5s;
 }
 #pp:hover{
-  font-size: 12rem;
+  font-size: 8rem;
   color: rgb(95,241,208);
 
 }
@@ -207,6 +207,46 @@ i{
 }
 #icon-1:hover{
   color: yellowgreen;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 100%;
+  height: 345px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #009688;
+  color: white;
+  transform: rotateY(180deg);
 }
 
 @media (min-width: 768px) {
