--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-.container-liquid{
+.container-fluid{
     background-color: rgb(10,25,47);
     width: 100%;
-
-
 }
 #aa{
   color: rgb(202,212,244);
@@ -172,7 +170,7 @@ i{
   color: rgb(95,241,208);
   font-size: 3rem;
   display: flex;
-  justify-content: left;
+  justify-content: center;
   transition: .8s;
 }
 #skills-offer:hover{
