--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   font-weight: bold;
 }
 #aa:hover{
-  color: rgb(95,241,208);
+  color: #45f3ff;
 }
 
 #n1 #l1 {
@@ -59,26 +59,26 @@ i{
 
 #facebook {
   top: 200px;
-  background-color: rgb(95,241,208);
+  background-color: #45f3ff;
   color: rgb(10,25,47);
   
 }
 
 #linkedin {
   top: 270px;
-  background-color: rgb(95,241,208);
+  background-color: #45f3ff;
   color: rgb(10,25,47);
 }
 
 #discord {
   top: 340px;
-  background-color: rgb(95,241,208);
+  background-color: #45f3ff;
   color: rgb(10,25,47);
 }
 
 #youtube {
   top: 410px;
-  background-color: rgb(95,241,208);
+  background-color: #45f3ff;
   color: rgb(10,25,47);
 }
 #hero1{
@@ -89,7 +89,7 @@ i{
   color: yellowgreen;
 }
 #devep{
-  color: rgb(95,241,208);
+  color: #45f3ff;
   transition: .8s;
 }
 #devep:hover{
@@ -97,7 +97,7 @@ i{
 }
 #me1{
   font-size: 2rem;
-  color:  rgb(95,241,208);
+  color:  #45f3ff;
   transition: .8s;
 }
 #me1:hover{
@@ -114,15 +114,15 @@ i{
 }
 #pp:hover{
   font-size: 8rem;
-  color: rgb(95,241,208);
+  color: #45f3ff;
 
 }
 .ff1{
-  color: rgb(95,241,208);
+  color: #45f3ff;
   margin-top: 100px;
 }
 #fp1{
-  color: rgb(95,241,208);
+  color: #45f3ff;
 }
 .gm1{
   font-size: 1rem;
@@ -139,7 +139,7 @@ i{
   margin: 20px 10px;
   border-radius: 25px;
   font-weight: bold;
-  border: 2px solid #009688;
+  border: 2px solid #45f3ff;
   background: transparent;
   color: #fff;
   cursor: pointer;
@@ -162,12 +162,12 @@ i{
 }
 #button77:hover{
   border: none;
-  background: #009688;
+  background: #45f3ff;
   color: rgb(10,25,47);
 
 }
 #skills-offer{
-  color: rgb(95,241,208);
+  color: #45f3ff;
   font-size: 3rem;
   display: flex;
   justify-content: center;
@@ -178,7 +178,7 @@ i{
   color: yellowgreen;
 }
 #f-p{
-  color: rgb(95,241,208); 
+  color: #45f3ff; 
   transition: .8s;
 }
 #f-p:hover{
@@ -186,7 +186,7 @@ i{
   color: yellowgreen;
 }
 #projec{
-  color: rgb(95,241,208); 
+  color: #45f3ff; 
   transition: .8s;
 }
 #project:hover{
@@ -197,10 +197,10 @@ i{
   transition: .8s;
 }
 #wwdd:hover{
-  color: rgb(95,241,208); 
+  color: #45f3ff; 
 }
 #icon-1{
-  color: rgb(95,241,208);
+  color: #45f3ff;
   transition: .8s;
 }
 #icon-1:hover{
@@ -242,7 +242,7 @@ i{
 }
 
 .flip-card-back {
-  background-color: #009688;
+  background-color:rgb(10, 25, 47);
   color: white;
   transform: rotateY(180deg);
 }
@@ -257,4 +257,190 @@ i{
   #mySidenav{
     display: none;
   }
+}
+/* about me */
+#card
+{
+    position: relative;
+    width: 350px;
+    height: 190px;
+    background: #333;
+    transition: 0.5s;
+}
+#card:hover
+{
+    height: 450px;
+}
+#card #lines
+{
+    position: absolute;
+    inset: 0;
+    background: #000;
+    overflow: hidden;
+}
+#card #lines::before
+{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    /* transform: translate(-50%, -50%); */
+    width: 600px;
+    height: 120px;
+    background: linear-gradient(transparent,  #45f3ff, 
+    #45f3ff,  #45f3ff, transparent);
+    animation: animate 4s linear infinite;
+}
+@keyframes animate
+{
+    0%
+    {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100%
+    {
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+#card #lines::after
+{
+    content: '';
+    position: absolute;
+    inset: 3px;
+    background-color: rgb(10,25,47);
+}
+#card #img8x
+{
+    position: absolute;
+    top: -50px;
+    left: 172px;
+    transform: translate(-50%);
+    width: 150px;
+    height: 150px;
+    background: rgb(10,25,47);
+    transition: 0.5s;
+    z-index: 10;
+    overflow: hidden;
+}
+#card:hover #img8x
+{
+    width: 250px;
+    height: 250px;
+}
+#card #img8x::before
+{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 700px;
+    height: 80%;
+    transform: translate(-50% -50%);
+    background: linear-gradient(transparent,  #45f3ff, 
+    #45f3ff,  #45f3ff, transparent);
+    animation: animate2 6s linear infinite
+}
+@keyframes animate2
+{
+    0%
+    {
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+        100%
+    {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+}
+#card #img8x::after
+{
+    content: '';
+    position: absolute;
+    background: rgb(10,25,47);
+}
+#card #img8x img
+{
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    z-index: 1;
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
+    filter: grayscale(1)
+}
+#card #cont
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    overflow: hidden;
+}
+#card #cont #details
+{
+    padding: 40px;
+    text-align: center;
+    width: 100%;
+    transition: 0.5s;
+    transform: translateY(145px);
+}
+#card:hover #cont #details
+{
+    transform: translateY(0px);
+}
+
+#card #cont #details h2
+{
+    font-size: 1.25em;
+    font-weight: 600;
+    color:  #45f3ff;
+    line-height: 1.2em;
+}
+#card #cont #details h2 span
+{
+    font-size: .75em;
+    font-weight: 500;
+    color: #fff;
+}
+#card #cont #details .data
+{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px;
+}
+#card #cont #details .data h3
+{
+    font-size: 1em;
+    color:  #45f3ff;
+    line-height: 1.2em;
+    font-weight: 600;
+}
+#card #cont #details .data h3 span
+{
+    font-size: 0.85em;
+    font-weight: 400;
+    color: #fff;
+}
+#card #cont #details #actionBtn
+{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+#card #cont #detailsdetails #actionBtn button
+{
+    padding: 10px 30px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    font-size: 1em;
+    font-weight:500;
+    background: #45f3ff;
+    color:  #222;
+    cursor: pointer;
+}
+#card #cont #details #actionBtn button:nth-child(2)
+{
+    background: #fff;
 }
