--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
-.container-fluid{
-    background-color: rgb(10,25,47);
-    width: 100%;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+body{
+  font-family: 'Roboto';
+  overflow-x: hidden;
+
+}
+
+.container-fluid{
+    background-color: rgb(10,25,47); 
+    overflow: hidden;
+}
+
+
 #aa{
   color: rgb(202,212,244);
   text-transform: uppercase;
@@ -82,6 +95,7 @@ i{
   color: rgb(10,25,47);
 }
 #hero1{
+  margin-top: 100px;
   color: rgb(202,212,244);
   transition: .8s;
 }
