--- a/style.css
+++ b/style.css
@@ -181,14 +181,16 @@ i{
 
 }
 #skills-offer{
-  color: #45f3ff;
-  font-size: 3rem;
+  color: rgb(10, 25, 47);
+  background: #45f3ff;
+  padding: 0 50px 0 50px;
+  border-radius: 25px;
+  font-size: 2rem;
   display: flex;
   justify-content: center;
   transition: .8s;
 }
 #skills-offer:hover{
-  font-size: 5rem;
   color: yellowgreen;
 }
 #f-p{
